--- a/dist_board.html
+++ b/dist_board.html
@@ -52,9 +52,11 @@
                 <div calss="datas">
                     <p class="center">行先の削除</p>
                 </div>
-                <div v-for="(dist, distIndex) in dists" class="datas">
-                    {{ dist }} 
-                    <button v-on:click="delDist(distIndex)">del</button>
+                <div v-for="(dist, distIndex) in dists">
+                    <p v-if="distIndex != 0" class="datas">
+                        {{ dist }} 
+                        <button v-on:click="delDist(distIndex)">del</button>
+                    </p>
                 </div>
                 <!-- <pre>{{ $data }}</pre> -->
             </div>
