カウントダウンページを作成。次はメイン表示部分の切り替えを作る。cssは仮設定ずみ。

--- a/static/dist_board.html
+++ b/static/dist_board.html
@@ -52,7 +52,7 @@
                 
             </div>
             <hr style="margin:60px 0px 60px 0px;">
-            <pre>{{ $data }}</pre>
+            <!-- <pre>{{ $data }}</pre> -->
 
 
 
