--- a/static/timer.html
+++ b/static/timer.html
@@ -27,7 +27,10 @@
                 <div v-show="setTimeIsVisible">
                     <hr>
                     <div class="setTime">残り時間:</div>
-                    <div :class="timerClass">{{ countDowntime }}</div>
+                    <div class="center">
+                        <span :class="timerClass">{{ countDowntime }}</span>
+                    </div>
+
                     <hr>
 
                     <div class="buttons">
